  of targets (it can now) and nested "unknown" elements have always
  been considered to be tasks (changed as well).

* <fixcrlf> would fail for files that contained lines longer than 8kB.

* Some junit formatters incorrectly assumed that all testcases would
  inherit from junit.framework.TestCase.

* <fixcrlf> dropped the first characters from Mac files.

Other changes:
--------------
* <move> attempts to rename the directory, if everything inside it is
  included, before performing file-by-file moves.  This attempt will
  be done only if filtering is off and if mappers are not used.  This
  is a performance improvement and there is no change otherwise in
  the funtionality of this task.

* Exec task has extra attribute "resultproperty" to get the return code
  into a property.
  
* Exec task prints a message when a timed out process is killed.  
  
* Added optional attributes - name, arch and version to <os>

* Unjar, Untar, Unwar and Unzip now support patternsets to 
  select files from an archive for extraction.  Filesets may be 
  used to select archived files for unarchival.

* Javac task allows debug levels to be specified.  Debug levels
  will have an effect only when the modern compiler or the 
  classic compiler (version 1.2 and higher) is used and debugging
  is enabled.

* Mail task allows specification of port number.

* Added support for specifying CVS_RSH in the <cvs/> task

* New tasks bzip2 and bunzip2 to pack and unpack files using the 
  BZip2 alogrithm, replaceregexp, checksum, translate, waitfor, input,
  manifest

* The attributes zipfile, jarfile, warfile and earfile (from the Zip, 
  Jar, War and Ear tasks) have been deprecated and superseded by a 
  new attribute "destfile".

* Added a new condition <isset> that test for the existence of a
  property to the condition task.

* Added a new conditions <checksum>, <http>, <socket>.

* Ant's testcases require JUnit 3.7 or above as they now use the new
  assertTrue method instead of assert.
